--- a/study_buddy_app/templates/dashboard.html
+++ b/study_buddy_app/templates/dashboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Dashboard</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <header>
