--- a/study_buddy_app/templates/index.html
+++ b/study_buddy_app/templates/index.html
@@ -25,7 +25,7 @@
             tech, teamwork, and productivity into a unified platform.
         </p>
 
-        <a class="btn-start" href="{{ url_for('unique_signup') }}">🚀 Get Started</a>
+        <a class="btn-start" href="{{ url_for('main.unique_signup') }}">🚀 Get Started</a>
     </main>
 
     <footer>
