--- a/study_buddy_app/templates/pomodoro.html
+++ b/study_buddy_app/templates/pomodoro.html
@@ -18,7 +18,7 @@
             <button onclick="resetTimer()" class="btn-start">Reset</button>
         </div>
             <div style="text-align: center; margin-top: 20px;">
-            <a href="/dashboard" class="btn-start">⬅ Back to Dashboard</a>
+            <a href="{{ url_for('main.dashboard_view') }}" class="btn-start">⬅ Back to Dashboard</a>
         </div>
     </main>
     <footer>
